# FP_stream_dashboard

./: .gitignore  README.md  conda_env.yaml  pyproject.toml
app/: db.py  main.py  settings.py  worker.py
