[tool.poetry]
name = "fp_streaming_dashboard"
version = "0.1.0"
description = "Real-time streaming dashboard using QuestDB, Celery, Redis, Plotly, and Dash"
authors = ["Nikolay <nokolay.zh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
pandas = "1.4.3"
celery = {extras = ["redis"], version = "^5.2.7"}
finnhub-python = "2.4.14"
pydantic = {version = "1.9.2", extras = ["dotenv"]}
psycopg = {extras = ["binary"], version = "^3.1.2"}
plotly = "^5.10.0"
dash = "^2.6.2"
psycopg-pool = "^3.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
